# otus_homework_2

./: Makefile  README.md  pyproject.toml
game/: bag.py  card.py  core.py  main.py
tests/: test_bag.py  test_card.py
