[project]
name = "otus-homework-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "prompt-toolkit>=3.0.51",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game"]

[project.scripts]
game = "game.main:main"
